--- a/productspage1.css
+++ b/productspage1.css
@@ -522,8 +522,9 @@ nav {
     font-size: 1.6rem;
     color: #FFFFFF;
     text-decoration: none;
-    padding: 1.2rem 3rem;
+    padding: 0.8rem 2rem;
     transition: all 0.5s;
+    border: none;
 }
 
 .cart-btn:hover {
