--- a/contact.css
+++ b/contact.css
@@ -1,6 +1,6 @@
 *{
-    margin: 0px;
-    padding: 0px;
+    margin: 0rem;
+    padding: 0rem;
     box-sizing: border-box;
     font-family: 'Source Sans Pro', sans-serif;
     text-decoration: none;
@@ -12,19 +12,19 @@
   
   form{
     background: rgba(27,31,34,0.80);
-    width: 640px;
-    margin: 50px auto;
+    width: 64rem;
+    margin: 5rem auto;
     max-width: 97%;
-    border-radius: 4px;
-    padding: 55px 30px;
+    border-radius: 0.4rem;
+    padding: 5.5rem 3rem;
   }
   
   form .title h2{
-    letter-spacing: 6px;
-    border-bottom: 1px solid white;
+    letter-spacing: 0.6rem;
+    border-bottom: 0.1rem solid white;
     display: inline-block;
-    padding-bottom: 8px;
-    margin-bottom: 32px;
+    padding-bottom: 0.8rem;
+    margin-bottom: 3.2rem;
   }
   
   form .half{
@@ -35,59 +35,59 @@
   form .half .item{
     display: flex;
     flex-direction: column;
-    margin-bottom: 24px;
+    margin-bottom: 2.4rem;
     width: 48%;
   }
   
   form label{
     display: block;
-    font-size: 13px;
-    letter-spacing: 3.5px;
-    margin-bottom: 16px;
+    font-size: 1.3rem;
+    letter-spacing: 0.35rem;
+    margin-bottom: 1.6rem;
   }
   
   form .half .item input{
-    border-radius: 4px;
-    border: 1px solid white;
+    border-radius: 0.4rem;
+    border: 0.1rem solid white;
     outline: 0;
-    padding: 16px;
+    padding: 1.6rem;
     width: 100%;
-    height: 44px;
+    height: 4.4rem;
     background: transparent;
-    font-size: 17px;
+    font-size: 1.7rem;
   }
   
   form .full{
-    margin-bottom: 24px;
+    margin-bottom: 2.4rem;
   }
   
   form .full textarea{
     background: transparent;
-    border-radius: 4px;
-    border: 1px solid white;
+    border-radius: 0.4rem;
+    border: 0.1rem solid white;
     outline: 0;
-    padding: 12px 16px;
+    padding: 1.2rem 1.6rem;
     width: 100%;
-    height: 200px;
-    font-size: 17px;
+    height: 20rem;
+    font-size: 1.7rem;
   }
   
   form .action{
-    margin-bottom: 32px;
+    margin-bottom: 3.2rem;
   }
   
   form .action input{
     background: transparent;
-    border-radius: 4px;
-    border: 1px solid white;
+    border-radius: 0.4rem;
+    border: 0.1rem solid white;
     cursor: pointer;
-    font-size: 13px;
+    font-size: 1.3rem;
     font-weight: 600;
-    height: 44px;
-    letter-spacing: 3px;
+    height: 4.4rem;
+    letter-spacing: 0.3rem;
     outline: 0;
-    padding: 0 20px 0 22px;
-    margin-right: 10px;
+    padding: 0 2rem 0 2.2rem;
+    margin-right: 1rem;
   }
   
   form .action input[type="submit"]{
@@ -96,20 +96,20 @@
   }
   
   form .icons a{
-    border: 1px solid white;
+    border: 0.1rem solid white;
     border-radius: 50%;
-    line-height: 36px;
+    line-height: 3.6rem;
     text-align: center;
     font-weight: 600;
-    width: 38px;
-    margin-right: 10px;
+    width: 3.8rem;
+    margin-right: 1rem;
   }
   
   form .half .item input:focus, form .full textarea:focus, form .action input[type="reset"]:hover, form .icons a:hover{
     background: rgba(255,255,255,0.075);
   }
   
-  @media (max-width: 480px){
+  @media (max-width: 48rem){
     form .half{
       flex-direction: column;
     }
@@ -121,7 +121,7 @@
       flex-direction: column;
     }
     form .action input{
-      margin-bottom: 10px;
+      margin-bottom: 1rem;
       width: 100%;
     }
   }
