--- a/productspage1.css
+++ b/productspage1.css
@@ -15,17 +15,19 @@ a{
 
 html {
     font-size: 62.5%;
+    width: 100%;
 }
 
 body {
     overflow-x: hidden;
+    width: 100%;
 }
 
 .cart {
     position: fixed;
     display: flex;
     top: 3%;
-    right: 1.2%;
+    right: 1%;
 }
 
 .cart::after {
@@ -140,7 +142,6 @@ header {
 }
 
 .navlist {
-    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -270,6 +271,7 @@ nav {
 
 .nav-menu .li-1 {
     width: 100%;
+    height: 6.5rem;
 }
 
 
@@ -621,7 +623,6 @@ footer {
 }
 
 footer {
-    max-height: 61rem;
     width: 100%;
     position: absolute;
     /* bottom: 0;weghalen als niet werkt*/
@@ -850,5 +851,27 @@ button i {
     .col:nth-child(2),
     .col:nth-child(3) {
         flex-basis: 100%;
+    }
+}
+@media screen and (max-width:30rem){
+    footer h4{
+        margin-right: 26rem;
+       
+    }
+    footer{
+        height: 180%;
+        width: 100%;
+    }
+    .nav-menu li a{
+        font-size: 0.7rem;
+    }
+    .right-column{
+        margin-top: 20rem;
+    }
+    .left-column img{
+        
+        margin-top: 3rem;
+        width: 27.5rem;
+        margin-right: 12rem;
     }
 }
