--- a/profile.css
+++ b/profile.css
@@ -36,17 +36,17 @@ body::before {
   overflow: hidden;
   background-color: #0f1010;
   background-image: linear-gradient(160deg, #080b0e 0%, #0c1429 100%);
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-  padding: 30px 0 40px;
-  border-radius: 20px;
-  width: 550px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0rem 5rem 10rem -2rem,
+    rgba(0, 0, 0, 0.3) 0rem 3rem 6rem -3rem;
+  padding: 3rem 0 4rem;
+  border-radius: 2rem;
+  width: 55rem;
 }
 .image {
   display: inline-block;
-  width: 175px;
-  height: 175px;
-  margin-bottom: 50px;
+  width: 17.5rem;
+  height: 17.5rem;
+  margin-bottom: 5rem;
   z-index: 1;
   position: relative;
 }
@@ -90,7 +90,7 @@ body::before {
   transition: all 0.9s ease 0s;
 }
 .card:hover .image img {
-  box-shadow: 0 0 0 14px #f7f5ec;
+  box-shadow: 0 0 0 1.4rem #f7f5ec;
   transform: scale(0.7);
 }
 .name {
@@ -98,8 +98,8 @@ body::before {
 }
 .title {
   display: block;
-  margin-top: -15px;
-  font-size: 15px;
+  margin-top: -1.5rem;
+  font-size: 1.5rem;
   color: #838383;
   text-transform: capitalize;
 }
@@ -110,7 +110,7 @@ body::before {
   background-color: #3b4c7a;
   background-image: linear-gradient(160deg, #3b4c7a 0%, #0c233b 100%);
   position: absolute;
-  bottom: -100px;
+  bottom: -10rem;
   left: 0;
   transition: all 0.5s ease 0s;
 }
@@ -122,8 +122,8 @@ body::before {
 }
 .social li i {
   display: block;
-  padding: 10px;
-  font-size: 17px;
+  padding: 1rem;
+  font-size: 1.7rem;
   color: white;
   transition: all 0.3s ease 0s;
   text-decoration: none;
